log
Thu 28 Mar 2024 02:26:04 AM UTC: 
 tests:  0|6
total_score: 0/70
aafec17
Thu 28 Mar 2024 02:36:48 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1c2276f
Thu 28 Mar 2024 02:39:01 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   nuevo->head = NULL;
      |        ^~
list.c:33:24: note: referencing an object of size 8 allocated by ‘malloc’
   33 |   List* nuevo = (List*)malloc(sizeof(List*));
      |                        ^~~~~~~~~~~~~~~~~~~~~
list.c:35:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   nuevo->tail = NULL;
      |        ^~
list.c:33:24: note: referencing an object of size 8 allocated by ‘malloc’
   33 |   List* nuevo = (List*)malloc(sizeof(List*));
      |                        ^~~~~~~~~~~~~~~~~~~~~
list.c:36:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   36 |   nuevo->current = NULL;
      |        ^~
list.c:33:24: note: referencing an object of size 8 allocated by ‘malloc’
   33 |   List* nuevo = (List*)malloc(sizeof(List*));
      |                        ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8ae5214
Thu 28 Mar 2024 02:39:38 AM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|5
total_score: 10/70
537e8b4
Thu 28 Mar 2024 02:40:09 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:9: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   33 |   List* nuevo = (List*)malloc(sizeof(List*));
      |         ^~~~~
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f54ae00
Thu 28 Mar 2024 02:40:27 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
689d319
Thu 28 Mar 2024 02:47:43 AM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
71377e2
Thu 28 Mar 2024 02:49:50 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:26: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   41 |   if(list->head == NULL) return;
      |                          ^~~~~~
list.c:39:8: note: declared here
   39 | void * firstList(List * list)
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5c0abd9
Thu 28 Mar 2024 02:50:05 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6f753eb
Thu 28 Mar 2024 02:52:32 AM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
6d02bba
Thu 28 Mar 2024 02:57:04 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a9dc362
Thu 28 Mar 2024 03:00:39 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4065d8f
Thu 28 Mar 2024 03:01:31 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6997402
Thu 28 Mar 2024 03:03:08 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
c275c0c
Thu 28 Mar 2024 03:03:39 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f68f8c
Thu 28 Mar 2024 03:04:00 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
d2606a9
Thu 28 Mar 2024 03:04:53 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
2de6260
Thu 28 Mar 2024 03:05:47 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5a9e2fa
Thu 28 Mar 2024 03:06:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
84a5a31
Thu 28 Mar 2024 03:07:17 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9f8adc1
